[project]
name = "comfyui-sg-nodes"
description = "Various utility nodes for ComfyUI"
version = "1.1.1"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/sebagallo/comfyui-sg-nodes"

[tool.comfy]
PublisherId = "sebagallo"
DisplayName = "comfyui-sg-nodes"
Icon = "https://raw.githubusercontent.com/sebagallo/comfyui-sg-nodes/master/assets/icon.png"