[project]
name = "comfyui-sg-nodes"
description = "A collection of nodes for selecting paths, JSON manipulation, networking (HTTP/Polling), and advanced UI-driven file/list selection."
version = "1.4.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/sebagallo/comfyui-sg-nodes"

[tool.comfy]
PublisherId = "sebagallo"
DisplayName = "comfyui-sg-nodes"
Icon = "https://raw.githubusercontent.com/sebagallo/comfyui-sg-nodes/master/assets/icon.png"